Fix line height on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -277,6 +277,7 @@ h6 {
   h5,
   h6 {
     font-size: 95%;
+    line-height: 2.1;
   }
 }
 
